# nyaapi-rs

./: .gitignore  Cargo.toml  README.md  example.ts  package.json  tsconfig.json
examples/: example.rs
src/: client.rs  error.rs  index.ts  lib.rs  types.rs
src/nyaa/: Nyaa.ts  category.scraper.ts  search.scraper.ts  view.scraper.ts
src/parser/: category.rs  mod.rs  search.rs  view.rs
src/types/: index.ts
tests/: nyaa-html.test.ts  nyaa-rss.test.ts
